--- a/aws.ini
+++ b/aws.ini
@@ -1,1 +1,1 @@
-web ansible_host=ec2-18-130-249-7.eu-west-2.compute.amazonaws.com ansible_port=22 ansible_user=ec2-user ansible_ssh_private_key_file=/Users/Keys/ansible_lnd_key.pem
+web ansible_host=ec2-15-236-40-121.eu-west-3.compute.amazonaws.com ansible_port=22 ansible_user=ubuntu ansible_ssh_private_key_file=/home/grey/Desktop/demo.pem
