--- a/aws.yaml
+++ b/aws.yaml
@@ -1,7 +1,7 @@
 all:
   hosts:
     web:
-      ansible_host: ec2-3-8-144-7.eu-west-2.compute.amazonaws.com
+      ansible_host: ec2-13-38-14-232.eu-west-3.compute.amazonaws.com
       ansible_port: 22
-      ansible_user: ec2-user
-      ansible_ssh_private_key_file: /Users/Keys/ansible_lnd_key.pem
+      ansible_user: ubuntu
+      ansible_ssh_private_key_file: /home/grey/Desktop/demo.pem
