--- a/playbooks/handler.yaml
+++ b/playbooks/handler.yaml
@@ -1,40 +1,38 @@
 - hosts: web
   remote_user: root
-  become: yes
+  become: true
   tasks:
+  - name: Update apt
+    apt:
+      update_cache: yes
   - name: Install Apache
-    yum:
-      name: httpd
-      state: installed
-    notify:
+    apt:
+      name: apache2
+      state: present
+    notify: 
       - Restart Apache
-  - name: Install nano
-    yum:
-      name: nano
-      state: installed
-    notify:
+  - name: Install mysql
+    apt:
+      name: mysql-server
+      state: present
+    notify: 
       - Restart Apache
-  - name: Install MySQL
-    yum:
-      name: mysql
-      state: installed
-    notify:
+  - name: Install php
+    apt:
+      name: php
+      state: present
+    notify: 
       - Restart Apache
-  - name: Remove Apache
-    yum: 
-      name: httpd
-      state: removed
-  - name: Remove nano
-    yum: 
-      name: nano
-      state: removed
-  - name: Remove MySQL
-    yum: 
-      name: httpd
-      state: removed
-
+  - name: Remove Packages
+    apt: 
+      name:
+        - apache2
+        - mysql-server
+        - php
+      state: absent
   handlers:
     - name: Restart Apache
       service:
-        name: httpd
+        name: apache2
         state: restarted
+    
