--- a/playbooks/service.yaml
+++ b/playbooks/service.yaml
@@ -1,16 +1,16 @@
 - hosts: web
   remote_user: root
-  become: yes
+  become: true
   tasks:
   - name: Install Apache
-    yum:
-      name: httpd
-      state: installed
+    apt:
+      name: apache2
+      state: present
   - name: Restart Apache
     service:
-      name: httpd
+      name: apache2
       state: restarted
   - name: Remove Apache
-    yum: 
-      name: httpd
-      state: removed
+    apt: 
+      name: apache2
+      state: absent
