--- a/test-vault.yaml
+++ b/test-vault.yaml
@@ -2,4 +2,4 @@
   tasks:
     - name: Return all secrets from a path
       ansible.builtin.debug:
-        msg: "{{ lookup('community.hashi_vault.hashi_vault', 'secret=secret/data/passwords/db token=hvs.S7Py8a4S4ZH1DV8Wu5Cxezd5 url=http://localhost:8200') }}"
+        msg: "{{ lookup('community.hashi_vault.hashi_vault', 'secret=secret/data/passwords/db token= url=http://localhost:8200') }}"
